# windows

./: .gitattributes  .gitignore  .gitmodules  .nvimlog  alpine.md  development.md  readme.md  settings.md  setup.ps1  ubuntu.md  vcpkg.md
setup/: .gitignore  files-relaxed.ps1  files.ps1  filetype.cmd  system-relaxed.ps1  system-secure.ps1  system-work.ps1  system.ps1  system.psm1  update.ps1  utility.psm1
setup/Explorer/: CMakeLists.txt  CMakeSettings.json  open.cpp  register.cmd
setup/Explorer/icons/: Console.lnk  Terminal.lnk
setup/IconData/: code.xcf  database.xcf  git.xcf
setup/IconExtract/: iconsext.cfg  readme.md  readme.txt
setup/SetUserFTA/: EULA.txt  SHA256.txt  readme.md  version.txt
setup/Test/: .clang-tidy  .gitconfig  .gitmodules  database.db  log.tlog  markdown.markdown  patch.patch  script.vim
setup/Test/code/: asm.asm  cpp.c++  cs.cs  hpp.hpp  hpp.ixx  java.java  manifest.manifest  perl.pl  python.py  resource.rc  shell.sh  vb.vb  xmlfile.xml
vlan/: readme.md
wsl/: .bashrc  alpine.md  ash.sh  bash.sh  crush.sh  debian.md  en_XX  gentoo.md  tmux.conf  ubuntu.md  wsl.sh
